# Meister-Translator

./: README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/com/squareround/meistertranslator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/squareround/meistertranslator/: Client.java  ClientAsyncListener.java  ClientExecuter.java  ClientLoadingView.java  CookieThumperSample.java  DBHelper.java  FFMPEGLinker.java  GSVAdapter.java  GetStoredActivity.java  MainActivity.java  MainActivity2.java  Menu.java  Parallel.java  Sequential.java  StrechableVideoView.java  VideoPlayerActivity.java
app/src/main/java/info/hoang8f/widget/: FButton.java
app/src/main/jni/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffmpeg-linker.c  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  native-lib.cpp
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavcodec/: dirac_arith.d  hevc.d  hevc_parser.d  hevc_ps.d  hevcdsp.d  lagarithrac.d  utvideodec.d  vp56rac.d  vp9_parser.d
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavcodec/libavutil/: ffversion.h
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavfilter/: avfilter.h  libavfilter.pc  vf_transpose.d
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavformat/: act.d  adtsenc.d  avformat.h  avio.h  bit.d  config.h  dtsdec.d  flvdec.d  h261dec.d  h264dec.d  hevc.d  isom.d  latmenc.d  libavformat.pc  mpc8.d  mpegts.d  oggparseflac.d  oggparsetheora.d  rdt.d  rtpdec_h261.d  rtpdec_h263_rfc2190.d  rtpdec_hevc.d  rtpdec_latm.d  rtpdec_mpeg4.d  rtpdec_qt.d  rtpenc_h263_rfc2190.d  sdp.d  shortendec.d  swfdec.d  url.h
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavformat/libavcodec/: flac.d  flvdec.d  flvenc.d  h264_parse.d  hevc_sei.d  hqxvlc.d  libavcodec.pc  mlp_parser.d  mlz.d  mpeg4audio.d  msmpeg4data.d  rtjpeg.d  vorbis_parser.d  vp56data.d
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavformat/libavcodec/libavutil/: pixfmt.h
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavformat/libavdevice/libavutil/: libavutil.pc
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavformat/libswresample/: libswresample.pc
app/src/main/jni/ffmpeg/armeabi-v7a/include/libavresample/: avresample.h
app/src/main/jni/ffmpeg/armeabi-v7a/include/libswresample/: swresample.h
app/src/main/jni/ffmpeg/armeabi-v7a/include/libswscale/: libswscale.pc
app/src/main/res/layout/: activity_getstoredvideo.xml  activity_main.xml  activity_main2.xml  activity_video_player.xml  dialog_showvideo.xml  item_menu.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
app/src/test/java/com/squareround/meistertranslator/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
